<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/margin5dp"
        android:paddingBottom="@dimen/margin5dp"
        android:text="@string/titleTextVal"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/titleTextSize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="306dp"
        android:contentDescription="@string/iconImageVal"
        android:paddingTop="@dimen/margin5dp"
        android:paddingBottom="@dimen/margin5dp"
        app:srcCompat="@drawable/ic_launcher_ico" />

    <TextView
        android:id="@+id/subTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin5dp"
        android:paddingBottom="@dimen/margin5dp"
        android:text="@string/subTitleTextVal"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/subTitleTextSize" />

    <TextView
        android:id="@+id/shortDescView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin5dp"
        android:paddingBottom="@dimen/margin5dp"
        android:text="@string/shortDescVal"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/shortDescTextSize" />

    <Button
        android:id="@+id/gadgetViewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/margin5dp"
        android:paddingBottom="@dimen/margin5dp"
        android:text="@string/gadgetViewBtnVal"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark" />
</LinearLayout>